about me update

--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@
                 </div>
                 <div class="col">
                   <p>
-                    I'm Krystal Tyrrell, call me Kris, and I can code!  I'm a full-stack web developer specializing in back end development with the LAMP stack.
-                    I'm a coding bootcamp grad, but my learning is neverending.
+                    I'm Krystal Tyrrell, call me Kris! I'm a recent coding bootcamp grad, and self-taught full stack web developer.  I've got a passion for creating unique and efficient web solutions.        
                   </p>
-                  <p>Nashville, TN is where I call home and when I'm not coding you can usually find me at a state park, playing board games, volunteering, or at an art crawl.
+                  <p>When I'm not coding you can usually find me at a state park, playing board games, volunteering, or at an art crawl.
                   </p>
                 </div>
                 </div> <!-- end nested row -->
